.kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-project
  labels:
    app: example
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: example-project
          image: numbermess/example-project:arm
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
