.kubectl/cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-project
spec:
  ports:
    - port: 80
      targetPort: 9090
      protocol: TCP
      name: example-project
